--- a/labstyle.css
+++ b/labstyle.css
@@ -153,7 +153,13 @@ li.missed{
 }
 
 li.missed:after{
-  content: "<--";
+  content: "<";
   color: red;
+  font-weight: bold;
+}
+li.missed:before{
+  content: ">";
+  color: red;
+  font-weight: bold;
 }
 
