--- a/labstyle.css
+++ b/labstyle.css
@@ -165,7 +165,7 @@ li.missed:before{
   color: #444;
   cursor: pointer;
   padding: 18px;
-  width: 100%;
+//  width: 100%;
   border: none;
   text-align: left;
   outline: none;
