--- a/labstyle.css
+++ b/labstyle.css
@@ -161,15 +161,15 @@ li.missed:before{
 
 
 .collapsible {
-  background-color: #eee;
-  color: #444;
-  cursor: pointer;
-  padding: 18px;
+//  background-color: #eee;
+//  color: #444;
+//  cursor: pointer;
+//  padding: 18px;
 //  width: 100%;
-  border: none;
-  text-align: left;
-  outline: none;
-  font-size: 15px;
+//  border: none;
+//  text-align: left;
+//  outline: none;
+//  font-size: 15px;
 }
 
 /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
