--- a/labstyle.css
+++ b/labstyle.css
@@ -8,6 +8,19 @@
   margin-bottom: 10px; 
   padding-left: 10px;
 }
+
+h2{
+  background-color: #094AB2;
+  color: white;
+  width: 100%;
+  height: 50px;
+  font-size: 24pt;
+  font-family: 'Segoe UI Light', sans-serif;
+  margin-bottom: 10px;
+  padding-left: 10px;
+}
+
+
 #od-commands {
   float: right;
   margin-right: 10pt;
