--- a/labstyle.css
+++ b/labstyle.css
@@ -9,12 +9,12 @@
   padding-left: 10px;
 }
 
-h2{
+.subtitle{
   background-color: #094AB2;
   color: white;
-  width: 100%;
+  width: 80%;
   height: 50px;
-  font-size: 24pt;
+  font-size: 18pt;
   font-family: 'Segoe UI Light', sans-serif;
   margin-bottom: 10px;
   padding-left: 10px;
